[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://raw_assets/images/menu/Farmville.jpg" type="Texture" id=2]
[ext_resource path="res://raw_assets/images/menu/title_cropped.png" type="Texture" id=3]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="Background" type="TextureRect" parent="CenterContainer"]
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 1024, 600 )
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MainContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -31.5
margin_top = -34.0
margin_right = 31.5
margin_bottom = 34.0

[node name="StartButton" type="Button" parent="MainContainer"]
margin_right = 63.0
margin_bottom = 20.0
focus_neighbour_top = NodePath("../QuitButton")
text = "Start"

[node name="OptionsButton" type="Button" parent="MainContainer"]
margin_top = 24.0
margin_right = 63.0
margin_bottom = 44.0
text = "Options"

[node name="CreditsButton" type="Button" parent="MainContainer"]
margin_top = 48.0
margin_right = 63.0
margin_bottom = 68.0
text = "Credits"

[node name="QuitButton" type="Button" parent="MainContainer"]
margin_top = 72.0
margin_right = 63.0
margin_bottom = 92.0
focus_neighbour_bottom = NodePath("../StartButton")
text = "Quit"

[node name="Title" type="TextureRect" parent="."]
modulate = Color( 1, 0, 0, 1 )
margin_left = 377.0
margin_top = 189.0
margin_right = 923.0
margin_bottom = 324.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[connection signal="pressed" from="MainContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MainContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
